# volatility-ui

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: dashboard_ui.py  models.py
